dark mode added to each page, a few bugs to fix though

--- a/Term-1-assignments/CoreyBarker_T1A2/src/css/stylesheet1.css
+++ b/Term-1-assignments/CoreyBarker_T1A2/src/css/stylesheet1.css
@@ -9,7 +9,69 @@ html {
 body {
     height:  100%;
     padding: 0.5rem 5rem;
+
+     /* dark theme component  */
+    transition: background 0.2s linear;
 }
+
+body.dark {
+    background-color: #3c4042;
+    color: white;
+}
+
+nav.dark {
+    background-color: #3c4042;
+    color: white;
+
+}
+
+.checkbox {
+    opacity: 0;
+    position: absolute;
+}
+
+.label {
+    width: 35px;
+    height: 18px;
+    background-color:grey;
+    display: flex;
+    border-radius:50px;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-between;
+    position: relative;
+    transform: scale(1.3);
+}
+
+.ball {
+    width: 14px;
+    height: 14px;
+    background-color: white;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    border-radius: 50%;
+    transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .label .ball{
+    transform: translateX(17px);
+}
+
+.fa-moon {
+    padding-left: 4px;
+    font-size: x-small;
+    color: #7655ce;
+}
+
+.fa-sun {
+    padding-right: 4px;
+    font-size: xx-small;
+    color: white;
+}
+
+/* Dark theme component  */
+
 
 h1, h2, h3, h4 {
     font-family: "Oswald" ;
@@ -94,7 +156,7 @@ nav {
 /* fixed navbar and drop down menu component  */
 
 .box {
-    padding: 5rem 0;
+    padding-top: 5rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -125,7 +187,7 @@ nav {
 
 /* links component  */
 #links {
-    /* padding-bottom: 3rem; */
+    padding-bottom: 2rem;
     height: 2%;
 }
 
@@ -163,10 +225,10 @@ nav {
 
 
 footer {
-    padding-top: 2rem;
+    /* padding-top: 2rem; */
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
+    flex-direction: column;
+    align-items: center;
 }
 
 @media screen and (max-width: 800px) {
@@ -175,6 +237,9 @@ footer {
     }
     nav {
         padding-right: 6rem;
+    }
+    .toggle {
+        display: none;
     }
 }
 @media screen and (min-width: 900px) { 
