--- a/Term-1-assignments/CoreyBarker_T1A2/src/css/stylesheet4.css
+++ b/Term-1-assignments/CoreyBarker_T1A2/src/css/stylesheet4.css
@@ -9,7 +9,68 @@ html {
 body {
     height:  100%;
     padding: 0.5rem 5rem;
+
+    /* dark theme component  */
+    transition: background 0.2s linear;
 }
+
+body.dark {
+    background-color: #3c4042;
+    color: white;
+}
+
+nav.dark {
+    background-color: #3c4042;
+    color: white;
+
+}
+
+.checkbox {
+    opacity: 0;
+    position: absolute;
+}
+
+.label {
+    width: 35px;
+    height: 18px;
+    background-color:grey;
+    display: flex;
+    border-radius:50px;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-between;
+    position: relative;
+    transform: scale(1.3);
+}
+
+.ball {
+    width: 14px;
+    height: 14px;
+    background-color: white;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    border-radius: 50%;
+    transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .label .ball{
+    transform: translateX(17px);
+}
+
+.fa-moon {
+    padding-left: 4px;
+    font-size: x-small;
+    color: #7655ce;
+}
+
+.fa-sun {
+    padding-right: 4px;
+    font-size: xx-small;
+    color: white;
+}
+
+/* Dark theme component  */
 
 h1, h2, h3, h4 {
     font-family: "Oswald" ;
@@ -50,7 +111,6 @@ nav {
     align-items: center;
     justify-content: space-between;
     background-color: white;
-    /* overflow: hidden; */
     top: 0;
     align-items: center;
 
@@ -98,14 +158,10 @@ nav {
     padding-top: 2rem;
     display: flex;
     justify-content: center;
-    /* flex-direction: row; */
-    /* flex-wrap: wrap; */
-    /* justify-content: space-between; */
 }
 
 .container1 {
     width: 100vw;
-    /* padding-bottom: 5rem; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -137,7 +193,6 @@ nav {
     width: 100%;
     padding-left: 2rem;
     display: flex;
-    /* align-content: flex-start; */
 }
 
 ul {
@@ -150,7 +205,7 @@ ul {
 
 /* links component  */
 #links {
-    /* padding-bottom: 3rem; */
+    padding-bottom: 2rem;
     height: 2%;
 }
 
@@ -188,10 +243,9 @@ ul {
 
 
 footer {
-    padding-top: 2rem;
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
+    flex-direction: column;
+    align-items: center;
 }
 @media screen and (max-width: 399px) {
     .mobhide {
@@ -233,6 +287,13 @@ footer {
         padding-right: 2rem;
     }
 }
+
+@media screen and (max-width: 800px) {
+    .toggle {
+        display: none;
+    }
+}
+
 @media only screen and (max-device-width: 900px) {
   .parallax {
     background-attachment: scroll;
